--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "dev": "nodemon index.js",
-    "build":"npm i"
+    "dev": "nodemon app.js",
+    "build": "npm i"
   },
-  
-  "author": "Aashika Prakash",
+  "author": "Arshdeep Singh",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
